--- a/dashboard.html
+++ b/dashboard.html
@@ -72,6 +72,12 @@
             </div>
             <div class="col-md-12">
                 <div class="panel panel-default">
+                    <div class="panel-heading"><strong>Вес</strong></div>
+                    <div id="WEDiv" style="width: 100%;"></div>
+                </div>
+            </div>
+            <div class="col-md-12">
+                <div class="panel panel-default">
                 <div class="panel-heading"><strong>Анализы</strong></div>
                 <table class="table table-stripped">
                     <thead>
@@ -96,7 +102,7 @@
         <div class="col-md-6">
             <div class="panel panel-default">
                 <div class="panel-heading"><strong>Дневник питания</strong></div>
-                {% for record in images %}
+                {% for record in reversed(images[len(images)-12:]) %}
                 <div class="media">
                     <div class="media-left media-top">
                         <img class="media-object img-thumbnail" style="width: 130px; margin: 10px;" src="/images/{{record['filename']}}">
@@ -122,7 +128,7 @@
 
     var trace1 = {
         x: ['2010-02-25 08:40:35','2017-02-28 08:40:35'],
-        y: [3,3],
+        y: [{{gh1}},{{gh1}}],
         yaxis: 'y2',
         fill:'tonexty',
         type: 'scatter',
@@ -133,7 +139,7 @@
     };
     var trace2 = {
         x: ['2010-02-25 08:40:35','2017-02-28 08:40:35'],
-        y: [15,15],
+        y: [{{gh2}},{{gh2}}],
         yaxis: 'y2',
         mode: 'lines',
         fill:'tonexty',
@@ -224,7 +230,7 @@
         annotations: annotations,
         barmode: 'group',
         title: 'Уровень глюкозы в крови',
-        xaxis: {range: ['2017-02-19 00:00:00', '2017-02-26 00:00:00']},
+        xaxis: {range: ['2017-02-19 00:00:00', '2017-02-27 00:00:00']},
         yaxis: {title: 'Болюсный инсулин'},
         yaxis2: {
             title: 'График уровня глюкозы',
@@ -263,6 +269,15 @@
     var layout = {barmode: 'stack'};
 
     Plotly.newPlot('ADDiv', data, layout);
+
+    var wetrace = {
+      x: {% raw we_times %},
+      y: {% raw we_values %},
+      name: 'Вес, кг',
+      type: 'bar'
+    };
+
+    Plotly.newPlot('WEDiv', [wetrace]);
 </script>
 </body>
 </html>
