--- a/therapy.html
+++ b/therapy.html
@@ -155,7 +155,14 @@
 
     </script>
     <style>
+            body {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
 
+.navbar {
+  margin-bottom: 20px;
+}
         .diabSmallCell {
               max-width: 80px !important;
               display: inline !important;
@@ -257,13 +264,13 @@
                                       <td>
                                           <div class="form-group">
                                               <label for="diab_GL1" class="control-label">Мин. </label>
-                                              <input class="form-control diabSmallCell" name="diab_GL1" id="diab_GL1" type="number" min="0" max="16" step="0,1" value="4" required/>
+                                              <input class="form-control diabSmallCell" name="diab_GL1" id="diab_GL1" type="number" min="0" max="16" step="0,1" value="{{gl1}}" required/>
                                           </div>
                                       </td>
                                       <td>
                                           <div class="form-group">
                                               <label for="diab_GL2" class="control-label">Макс. </label>
-                                              <input class="form-control diabSmallCell" name="diab_GL2" id="diab_GL2" type="number" min="0" max="16" step="0,1" value="7" required/>
+                                              <input class="form-control diabSmallCell" name="diab_GL2" id="diab_GL2" type="number" min="0" max="16" step="0,1" value="{{gl2}}" required/>
                                           </div>
                                       </td>
 
@@ -273,13 +280,13 @@
                                       <td>
                                           <div class="form-group">
                                               <label for="diab_GH1" class="control-label">Мин. </label>
-                                              <input class="form-control diabSmallCell" name="diab_GH1" id="diab_GH1" type="number" min="0" max="16" step="0,1" value="3" required/>
+                                              <input class="form-control diabSmallCell" name="diab_GH1" id="diab_GH1" type="number" min="0" max="16" step="0,1" value="{{gh1}}" required/>
                                           </div>
                                       </td>
                                       <td>
                                           <div class="form-group">
                                               <label for="diab_GH2" class="control-label">Макс. </label>
-                                              <input class="form-control diabSmallCell" name="diab_GH2" id="diab_GH2" type="number" min="0" max="16" step="0,1" value="11" required/>
+                                              <input class="form-control diabSmallCell" name="diab_GH2" id="diab_GH2" type="number" min="0" max="16" step="0,1" value="{{gh2}}" required/>
                                           </div>
                                       </td>
 
@@ -720,6 +727,102 @@
                       </div>
                   </form>
     </div>
+<!-- Popover 2 hidden content -->
+<div id="popoverDContent" style="display: none">
+    <ul>
+        <li><a onclick="addHour('Physd', 'diab_Physd_hours_table', 'DN');addHour('Physd', 'diab_Physd_hours_table', 'DV');
+        addHour('Physd', 'diab_Physd_hours_table', 'PU');$('#popoverD').popover('hide');">Давление и пульс</a></span></li>
+        <li><a onclick="addHour('Physd', 'diab_Physd_hours_table', 'GL');$('#popoverD').popover('hide');">Сахар в крови</a></li>
+        <li><a onclick="addHour('Physd', 'diab_Physd_hours_table', 'WE');$('#popoverD').popover('hide');">Вес</a></li>
+    </ul>
+</div>
+<!-- Popover 2 hidden title -->
+<div id="popoverWContent" style="display: none">
+    <ul>
+        <li><a onclick="addHour('Physw', 'diab_Physw_hours_table', 'DN');addHour('Physw', 'diab_Physw_hours_table', 'DV');
+        addHour('Physw', 'diab_Physw_hours_table', 'PU');$('#popoverW').popover('hide');">Давление и пульс</a></span></li>
+        <li><a onclick="addHour('Physw', 'diab_Physw_hours_table', 'GL');$('#popoverW').popover('hide');">Сахар в крови</a></li>
+        <li><a onclick="addHour('Physw', 'diab_Physw_hours_table', 'WE');$('#popoverW').popover('hide');">Вес</a></li>
+    </ul>
+</div>
+<div id="popoverMContent" style="display: none">
+    <ul>
+        <li><a onclick="addHour('Physm', 'diab_Physm_hours_table', 'DN');addHour('Physm', 'diab_Physm_hours_table', 'DV');
+        addHour('Physm', 'diab_Physm_hours_table', 'PU');$('#popoverM').popover('hide');">Давление и пульс</a></span></li>
+        <li><a onclick="addHour('Physm', 'diab_Physm_hours_table', 'GL');$('#popoverM').popover('hide');">Сахар в крови</a></li>
+        <li><a onclick="addHour('Physm', 'diab_Physm_hours_table', 'WE');$('#popoverM').popover('hide');">Вес</a></li>
+    </ul>
+</div>
+
+<script>
+    function enablePopover() {
+        $("#popoverD").popover({
+            html: true,
+            trigger: 'click',
+            content: function () {
+                return $('#popoverDContent').html();
+            },
+        });
+        $("#popoverW").popover({
+            html: true,
+            trigger: 'click',
+            content: function () {
+                return $('#popoverWContent').html();
+            },
+        });
+        $("#popoverM").popover({
+            html: true,
+            trigger: 'click',
+            content: function () {
+                return $('#popoverMContent').html();
+            },
+        });
+
+    }
+    enablePopover();
+    $('body').on('hidden.bs.popover', function (e) {
+        $(e.target).data("bs.popover").inState.click = false;
+    });
+    $('.pop').popover().click(function () {
+        setTimeout(function () {
+            $('.pop').popover('hide');
+        }, 4000);
+    });
+    $.validator.methods.range = function (value, element, param) {
+        var globalizedValue = value.replace(",", ".");
+        return this.optional(element) || (globalizedValue >= param[0] && globalizedValue <= param[1]);
+    }
+
+    $.validator.methods.number = function (value, element) {
+        return this.optional(element) || /^-?(?:\d+|\d{1,3}(?:[\s\.,]\d{3})+)(?:[\.,]\d+)?$/.test(value);
+    }
+    $.validator.addMethod('time', function(value, element, param) {
+        return value == '' || value.match(/^([01][0-9]|2[0-3]):[0-5][0-9]$/);
+    }, 'Некорректное время!');
+    $.extend( $.validator.messages, {
+        required: "Это поле необходимо заполнить.",
+        remote: "Пожалуйста, введите правильное значение.",
+        email: "Пожалуйста, введите корректный адрес электронной почты.",
+        url: "Пожалуйста, введите корректный URL.",
+        date: "Пожалуйста, введите корректную дату.",
+        dateISO: "Пожалуйста, введите корректную дату в формате ISO.",
+        number: "Пожалуйста, введите число.",
+        digits: "Пожалуйста, вводите только цифры.",
+        creditcard: "Пожалуйста, введите правильный номер кредитной карты.",
+        equalTo: "Пожалуйста, введите такое же значение ещё раз.",
+        extension: "Пожалуйста, выберите файл с правильным расширением.",
+        maxlength: $.validator.format( "Пожалуйста, введите не больше {0} символов." ),
+        minlength: $.validator.format( "Пожалуйста, введите не меньше {0} символов." ),
+        rangelength: $.validator.format( "Пожалуйста, введите значение длиной от {0} до {1} символов." ),
+        range: $.validator.format( "Пожалуйста, введите число от {0} до {1}." ),
+        max: $.validator.format( "Пожалуйста, введите число, меньшее или равное {0}." ),
+        min: $.validator.format( "Пожалуйста, введите число, большее или равное {0}." )
+    } );
+    $(function() {
+        $('#diabForm').validate();
+    });
+</script>
+
 
 </body>
 </html>
