--- a/client/client.html
+++ b/client/client.html
@@ -7,6 +7,7 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script
   src="https://code.jquery.com/jquery-3.1.1.min.js"
   integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
@@ -31,6 +32,10 @@
             padding-top: 40px;
             padding-bottom: 40px;
             background-color: #eee;
+        }
+
+        .block {
+            min-width: 350px;
         }
 
         .form-signin {
@@ -68,6 +73,11 @@
             border-bottom-left-radius: 0;
         }
 
+        input[type="checkbox"] {
+            margin: 0 2px 0 0;
+            width: 20px;
+        }
+
         .form-signin input[type="password"] {
             margin-bottom: 10px;
             border-top-left-radius: 0;
@@ -77,19 +87,130 @@
         .panel-body form {
             margin-bottom: 10px;
         }
+
+        .hidden {
+            display: none;
+        }
+
+        .minimap {
+            text-align: center;
+            margin-bottom: 10px;
+        }
+
+        .minimap div {
+            display: inline-block;
+            width: 19%;
+            height: 30px;
+            border: 1px solid #aaa;
+            background-image: linear-gradient(to bottom,#fff 0,#e0e0e0 100%);
+            cursor: pointer;
+        }
+
+        .minimap div:hover {
+            background-image: linear-gradient(to bottom,#e0e0e0 0,#fff 100%);
+        }
+
+        #heart-logo {
+            border-top-left-radius: 10px;
+            border-bottom-left-radius: 10px;
+        }
+
+        #skin-logo {
+            border-top-right-radius: 10px;
+            border-bottom-right-radius: 10px;
+        }
+
+        .minimap .active {
+            background-image: linear-gradient(to bottom,#e0e0e0 0,#fff 100%);
+        }
+
+
     </style>
 
     <script>
-        
+
         function back() {
             $('.block').hide();
             $('#chooseBlock').show();
         }
+
         function toBlock(block) {
             $('#chooseBlock').hide();
             $('#' + block).show();
+
+            $("#alertDiv").hide();
+
+            // извините за этот гразный хак, но сегодня сдавать проект
+            $('#OSBlock').find('*').show();
+            $('.simp-block').hide();
+            $($('.simp-block')[0]).show();
+            simpTotalScore = 0;
         }
 
+        var simpTotalScore = 0;
+        function simpCheckChange(checkbox, score) {
+            if (checkbox.checked) {
+                simpTotalScore += score;
+            } else {
+                simpTotalScore -= score;
+            }
+
+            if (simpTotalScore > 3) {
+                toSimpBlock('result-block', '');
+            }
+        }
+
+        var currentBlock = 'heart-block';
+        function nextSimpBlock() {
+            var nextBlock = 0;
+            $(".minimap").find("div").removeClass("active");
+            if (currentBlock == 'heart-block') {
+                nextBlock = 'nerve-block';
+                $("#nerve-logo").addClass("active");
+            } else if (currentBlock == 'nerve-block') {
+                nextBlock = 'others-block';
+                $("#others-logo").addClass("active");
+            } else if (currentBlock == 'others-block') {
+                nextBlock = 'stomack-block';
+                $("#stomack-logo").addClass("active");
+            } else if (currentBlock == 'stomack-block') {
+                nextBlock = 'skin-block';
+                $("#skin-logo").addClass("active");
+            } else if (currentBlock == 'skin-block') {
+                toSimpBlock('result-block', '');
+                return;
+            }
+            $("#" + currentBlock).hide();
+            $("#" + nextBlock).show();
+            currentBlock = nextBlock;
+        }
+
+
+        function toSimpBlock(blockId, logoDiv) {
+            $(".minimap").find("div").removeClass("active");
+            $(logoDiv).addClass("active");
+            $("#" + currentBlock).hide();
+            $("#" + blockId).show();
+            currentBlock = blockId;
+            if (blockId == 'result-block') {
+                $(".minimap").hide();
+                $("#nextSimpBlockButton").hide();
+                var simpMessage = "";
+                var messageClass = "";
+                if (0 < simpTotalScore && simpTotalScore <=3) {
+                    simpMessage = "Симптомы говорят о потенциальном риске для вашего здоровья. Рекомендовано обратиться к врачу в ближайшее время";
+                    messageClass = "alert-warning";
+                } else if (simpTotalScore > 3) {
+                    simpMessage = "Указанные вами симптомы говорят о высокой опасности для вашего здоровья! Воспользуйтесь функцией экстренного вызова врача: <br><p><a href='tel:01234567890' class='btn btn-danger'>Вызвать врача</a></p>";
+                    messageClass = "alert-danger";
+                } else {
+                    simpMessage = "С вами все в порядке. Мы рекомендуем регулярно посещать вашего лечащего врача и в случае ухудшения состояния здоровья необходимо сообщить об этом специалисту здравоохранения";
+                    messageClass = "alert-success";
+                }
+                $("#simp-message").html(simpMessage);
+                $("#simp-message").addClass(messageClass);
+            }
+        }
 
     </script>
 </head>
@@ -99,14 +220,14 @@
 <div class="container">
     {% if message!='' %}
         {% if message_ok %}
-            <div class="alert alert-success" role="alert"><strong>Готово!</strong> {{message}}</div>
+            <div class="alert alert-success" role="alert" id="alertDiv"><strong>Готово!</strong> {{message}}</div>
             {% end %}
         {% if not message_ok %}
-            <div class="alert alert-warning" role="alert"><strong>Готово!</strong> {{message}}</div>
+            <div class="alert alert-warning" role="alert" id="alertDiv"><strong>Готово!</strong> {{message}}</div>
             {% end %}
         {% end %}
     {% if error!='' %}
-        <div class="alert alert-danger" role="alert"><strong>Ошибка!</strong> {{error}}</div>
+        <div class="alert alert-danger" role="alert" id="alertDiv"><strong>Ошибка!</strong> {{error}}</div>
         {% end %}
     <div id="chooseBlock">
         <div class="list-group" style="border-radius: 0px; margin-top: 20px;">
@@ -167,6 +288,16 @@
                 </div>
                 <div class="media-body media-middle">
                     <h3>Анализ</h3>
+                </div>
+            </a>
+            <a style="border-radius: 0px;" href="#" class="list-group-item" onclick="toBlock('OSBlock')">
+                <div class="media-left media-middle">
+                    <img src="https://maxcdn.icons8.com/Color/PNG/48/Healthcare/heart_health-48.png" width="50"
+                         height="50"
+                         class="text-center">
+                </div>
+                <div class="media-body media-middle">
+                    <h3>Диагностика осложнений</h3>
                 </div>
             </a>
         </div>
@@ -356,6 +487,69 @@
             </div>
         </div>
 
+    </div>
+    <div id='OSBlock' style="display: none;" class='block'>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <h3 class="panel-title">Диагностика осложнений</h3>
+            </div>
+            <div class="panel-body">
+                <div class="minimap">
+                    <div class="active" id="heart-logo" onclick="toSimpBlock('heart-block', this);">
+                        <img src="https://maxcdn.icons8.com/Color/PNG/24/Gaming/hearts-24.png" title="Hearts" width="24">
+                    </div>
+                    <div id="nerve-logo" onclick="toSimpBlock('nerve-block', this);">
+                        <img src="https://maxcdn.icons8.com/Color/PNG/24/Healthcare/brain-24.png" title="Brain" width="24">
+                    </div>
+                    <div id="others-logo" onclick="toSimpBlock('others-block', this);">
+                        <img src="https://maxcdn.icons8.com/Color/PNG/24/Messaging/sad-24.png" title="Sad" width="24">
+                    </div>
+                    <div id="stomack-logo" onclick="toSimpBlock('stomack-block', this)">
+                        <img src="https://maxcdn.icons8.com/Color/PNG/24/Healthcare/stomach-24.png" title="Stomach" width="24">
+                    </div>
+                    <div id="skin-logo" onclick="toSimpBlock('skin-block', this)">
+                        <img src="https://maxcdn.icons8.com/Color/PNG/24/Healthcare/skin-24.png" title="Skin" width="24">
+                    </div>
+                </div>
+                <div class="form-group">
+                    <label>Какие симптомы вы испытываете?</label>
+                    <div class="simp-block" id="heart-block">
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Учащенное сердцебиение</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 5)"> Резкое снижение артериального давления</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 10)"> Боли в сердце, которые не проходят после приема препаратов для лечения стенокардии (если вы их принимаете)</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Одышка</div>
+                    </div>
+                    <div class="simp-block" id="nerve-block">
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Головные боли</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 3)"> Сонливость</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 5)"> Нарушение сознания</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 3)"> Агрессивность</div>
+                    </div>
+                    <div class="simp-block" id="others-block">
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 5)"> Мышечная боль, которая не проходит после приема алальгетиков</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 5)"> Резкий упадок сил</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 5)"> Дрожь и потливость</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 3)"> Сильный голод</div>
+                    </div>
+                    <div class="simp-block" id="stomack-block">
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Рвота</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Диарея</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 1)"> Боли в животе</div>
+                    </div>
+                    <div class="simp-block" id="skin-block">
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 3)"> Бледность кожи</div>
+                        <div><input type="checkbox" onclick="simpCheckChange(this, 3)"> Сниженная эластичность кожи</div>
+                    </div>
+                    <div class="simp-block" id="result-block">
+                        <div id="simp-message" class="alert alert-success">
+                            С вами все в порядке
+                        </div>
+                    </div>
+                </div>
+                <button class="btn btn-success" id="nextSimpBlockButton" onclick="nextSimpBlock(this)">Далее</button>
+                <button onclick="location.reload();" class="btn btn-default">Назад</button>
+            </div>
+        </div>
     </div>
 
 </div> <!-- /container -->
