Edit emergency phone  number

--- a/client/client.html
+++ b/client/client.html
@@ -201,7 +201,7 @@
                     simpMessage = "Симптомы говорят о потенциальном риске для вашего здоровья. Рекомендовано обратиться к врачу в ближайшее время";
                     messageClass = "alert-warning";
                 } else if (simpTotalScore > 3) {
-                    simpMessage = "Указанные вами симптомы говорят о высокой опасности для вашего здоровья! Воспользуйтесь функцией экстренного вызова врача: <br><p><a href='tel:01234567890' class='btn btn-danger'>Вызвать врача</a></p>";
+                    simpMessage = "Указанные вами симптомы говорят о высокой опасности для вашего здоровья! Воспользуйтесь функцией экстренного вызова врача: <br><p><a href='tel:112' class='btn btn-danger'>Вызвать врача</a></p>";
                     messageClass = "alert-danger";
                 } else {
                     simpMessage = "С вами все в порядке. Мы рекомендуем регулярно посещать вашего лечащего врача и в случае ухудшения состояния здоровья необходимо сообщить об этом специалисту здравоохранения";
