Add diagnostic to dashboard

--- a/client/client.html
+++ b/client/client.html
@@ -204,7 +204,7 @@
                     simpMessage = "Указанные вами симптомы говорят о высокой опасности для вашего здоровья! Воспользуйтесь функцией экстренного вызова врача: <br><p><a href='tel:112' class='btn btn-danger'>Вызвать врача</a></p>";
                     messageClass = "alert-danger";
                 } else {
-                    simpMessage = "С вами все в порядке. Мы рекомендуем регулярно посещать вашего лечащего врача и в случае ухудшения состояния здоровья необходимо сообщить об этом специалисту здравоохранения";
+                    simpMessage = "С вами все в порядке. Мы рекомендуем регулярно посещать вашего лечащего врача и в случае ухудшения состояния здоровья сообщать об этом специалисту здравоохранения";
                     messageClass = "alert-success";
                 }
                 $("#simp-message").html(simpMessage);
