--- a/dashboard.html
+++ b/dashboard.html
@@ -44,7 +44,7 @@
                     <li class="active"><a href="/">Статистика</a></li>
                     <li><a href="therapy">Терапия</a></li>
                     <li><a href="#">Уведомления</a></li>
-                    <li><a href="#">Диагностика осложнений</a></li>
+                    <li><a href="diagno">Диагностика осложнений</a></li>
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Связь с врачем</a></li>
 
