--- a/dashboard.html
+++ b/dashboard.html
@@ -41,10 +41,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a href="/">Статистика</a></li>
+                    <li class="active"><a href="/">Медкарта</a></li>
+                    <li><a href="diagno">Диагностика осложнений</a></li>
                     <li><a href="therapy">Терапия</a></li>
                     <li><a href="#">Уведомления</a></li>
-                    <li><a href="diagno">Диагностика осложнений</a></li>
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Связь с врачем</a></li>
 
