--- a/diagno.html
+++ b/diagno.html
@@ -162,13 +162,15 @@ function toSimpBlock(blockId, logoDiv) {
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Статистика</a></li>
+                    <li><a href="/">Медкарта</a></li>
+                    <li class="active"><a href="diagno">Диагностика осложнений</a></li>
                     <li><a href="therapy">Терапия</a></li>
                     <li><a href="#">Уведомления</a></li>
-                    <li class="active"><a href="diagno">Диагностика осложнений</a></li>
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Связь с врачем</a></li>
+
                 </ul>
+
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
