--- a/therapy.html
+++ b/therapy.html
@@ -237,10 +237,10 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Статистика</a></li>
-                    <li class="active"><a href="/therapy">Терапия</a></li>
+                    <li><a href="/">Медкарта</a></li>
+                    <li><a href="diagno">Диагностика осложнений</a></li>
+                    <li class="active"><a href="therapy">Терапия</a></li>
                     <li><a href="#">Уведомления</a></li>
-                    <li><a href="#">Диагностика осложнений</a></li>
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Связь с врачем</a></li>
 
