--- a/diagno.html
+++ b/diagno.html
@@ -169,6 +169,9 @@ function toSimpBlock(blockId, logoDiv) {
                     <li><a href="#">Информация</a></li>
                     <li><a href="#">Связь с врачем</a></li>
                 </ul>
+				<ul class="nav navbar-nav navbar-right">
+              		<li><a href="logout">Выход</a></li>
+              	</ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
     </nav>
