--- a/dashboard.html
+++ b/dashboard.html
@@ -49,6 +49,9 @@
                     <li><a href="#">Связь с врачем</a></li>
 
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+              		<li><a href="exit">Выход</a></li>
+              	</ul>
 
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
@@ -230,7 +233,7 @@
         annotations: annotations,
         barmode: 'group',
         title: 'Уровень глюкозы в крови',
-        xaxis: {range: ['2017-02-19 00:00:00', '2017-02-27 00:00:00']},
+        xaxis: {range: ['2017-02-23 00:00:00', '2017-02-27 00:00:00']},
         yaxis: {title: 'Болюсный инсулин'},
         yaxis2: {
             title: 'График уровня глюкозы',
