--- a/diagno.html
+++ b/diagno.html
@@ -171,7 +171,7 @@ function toSimpBlock(blockId, logoDiv) {
 
                 </ul>
 				<ul class="nav navbar-nav navbar-right">
-              		<li><a href="logout">Выход</a></li>
+              		<li><a href="exit">Выход</a></li>
               	</ul>
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
