--- a/therapy.html
+++ b/therapy.html
@@ -245,6 +245,9 @@
                     <li><a href="#">Связь с врачем</a></li>
 
                 </ul>
+                <ul class="nav navbar-nav navbar-right">
+              		<li><a href="exit">Выход</a></li>
+              	</ul>
 
             </div><!--/.nav-collapse -->
         </div><!--/.container-fluid -->
