--- a/diagno.html
+++ b/diagno.html
@@ -162,12 +162,11 @@ function toSimpBlock(blockId, logoDiv) {
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Медкарта</a></li>
+                    <li><a href="/">Календарь</a></li>
+                    <li><a href="/stats">Медкарта</a></li>
                     <li class="active"><a href="diagno">Диагностика осложнений</a></li>
-                    <li><a href="therapy">Терапия</a></li>
-                    <li><a href="#">Уведомления</a></li>
+                    <li><a href="therapy">Настройка терапии</a></li>
                     <li><a href="#">Информация</a></li>
-                    <li><a href="#">Связь с врачем</a></li>
 
                 </ul>
 				<ul class="nav navbar-nav navbar-right">
