--- a/therapy.html
+++ b/therapy.html
@@ -237,12 +237,11 @@
             </div>
             <div id="navbar" class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">Медкарта</a></li>
+                    <li><a href="/">Календарь</a></li>
+                    <li><a href="/stats">Медкарта</a></li>
                     <li><a href="diagno">Диагностика осложнений</a></li>
-                    <li class="active"><a href="therapy">Терапия</a></li>
-                    <li><a href="#">Уведомления</a></li>
+                    <li class="active"><a href="therapy">Настройка терапии</a></li>
                     <li><a href="#">Информация</a></li>
-                    <li><a href="#">Связь с врачем</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
