--- a/client.html
+++ b/client.html
@@ -464,6 +464,10 @@
                                         <input type="file" class="form-control" name="photo">
                                         <input type="hidden" name="type" value="FD">
                                     </div>
+                                    <div class="form-group">
+                                        <label>Примерный вес</label>
+                                        <input type="text" class="form-control" name="weight" required>
+                                    </div>
                                     <button type="submit" class="btn btn-success">Сохранить</button>
 
                                 </form>
